# advent_2022

./: .gitignore  Cargo.toml  Day01.rs  Day02.rs  Day03.rs  Day04.rs  Day05.rs  Day07.rs  Day08.rs  Day09.rs  Day10.rs  Day11.rs  Day12.rs  Day13.rs  Day14.rs  Day16.rs  Day17.rs  Day18.rs  Day19.rs  Day22.rs  Day23.rs  Day24.rs  README.md  main_worksheet.rs
data/day07/: part1_test_2.txt
data/day19/: part2_input.txt
data/day24/: part1_test.txt  part2_input.txt
src/: lib.rs  main.rs
