[package]
name = "advent_2022"
version = "0.1.0"
edition = "2021"

[dependencies]
parse-display ="0.7.0"
ndarray = "0.15.6"
serde_json = "1.0.89"
itertools = "0.10.5"
rust_decimal = "1.27"
rust_decimal_macros = "1.27"
array2d = "0.3.0"
enum-display-derive = "0.1.1"
thincollections = "0.5.4"


[profile.release]

